# sudu-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  init.sql  newDeploy.sh  seed.sql  start.sh  update_data_to_sql.py
src/: db.rs  handlers.rs  main.rs  models.rs
static/: index.html
static/generator/: index.js  killer-sudoku-bundle.js  package-lock.json  package.json  test.html
static/pa/: killer_sudoku_answers_1.txt  killer_sudoku_difficulty_1.txt  script.py  test.py
